src/gallium/drivers/iris/xe/iris_kmd_backend.c
@@ -259,8 +259,12 @@ xe_batch_submit(struct iris_batch *batch)
       .syncs = (uintptr_t)syncs,
       .num_syncs = sync_len,
    };
-   if (!batch->screen->devinfo->no_hw)
-       ret = intel_ioctl(iris_bufmgr_get_fd(bufmgr), DRM_IOCTL_XE_EXEC, &exec);
+   if (!batch->screen->devinfo->no_hw) {
+      uint8_t tries = 3;
+      do {
+         ret = intel_ioctl(iris_bufmgr_get_fd(bufmgr), DRM_IOCTL_XE_EXEC, &exec);
+      } while (ret && tries-- && (ret == -ENOMEM || ret == -EPERM));
+   }
 
    simple_mtx_unlock(bo_deps_lock);
 
